# internal/server/impl/respond_error.go
@@ -1,6 +1,7 @@
 package impl
 
 import (
+	"errors"
 	"github.com/janobono/auth-service/generated/openapi"
 	"github.com/janobono/go-util/common"
 	"log/slog"
@@ -20,16 +21,10 @@ func RespondWithError(ctx *gin.Context, statusCode int, code openapi.ErrorCode, 
 }
 
 func RespondWithServiceError(ctx *gin.Context, err error) {
-	switch {
-	case common.IsCode(err, string(openapi.UNAUTHORIZED)):
-		RespondWithError(ctx, http.StatusUnauthorized, openapi.UNAUTHORIZED, err.Error())
-	case common.IsCode(err, string(openapi.FORBIDDEN)):
-		RespondWithError(ctx, http.StatusForbidden, openapi.FORBIDDEN, err.Error())
-	case common.IsCode(err, string(openapi.NOT_FOUND)):
-		RespondWithError(ctx, http.StatusNotFound, openapi.NOT_FOUND, err.Error())
-	case common.IsCode(err, string(openapi.INVALID_ARGUMENT)):
-		RespondWithError(ctx, http.StatusBadRequest, openapi.INVALID_ARGUMENT, err.Error())
-	default:
-		RespondWithError(ctx, http.StatusInternalServerError, openapi.UNKNOWN, err.Error())
+	var serviceErr *common.ServiceError
+	if errors.Is(err, serviceErr) {
+		RespondWithError(ctx, serviceErr.Status, openapi.ErrorCode(serviceErr.Code), serviceErr.Error())
+		return
 	}
+	RespondWithError(ctx, http.StatusInternalServerError, openapi.UNKNOWN, err.Error())
 }
